**2022-11: version 47.0**

* Add support to ``extract`` command for sub-playbooks. They are treated like normal Playbooks so no
  further command line args are required. Just ensure you include all other customizations in your
  command. For example:

  .. code-block::

    $ resilient-sdk extract --playbook my_sub_playbook --function fn_in_sub_playbook

* ``codegen`` template updates with Python 3 syntax
* ``docgen`` template updated with references to Edge Gateway (formerly App Host)
* Added new ``--poller`` flag to ``codegen``. This allows for creating poller-based apps 
  which generates a ``lib`` directory in the package and a ``poller`` directory each with 
  items needed to create a poller-based app.


**2022-08: version 46.0**

* Check to see if the current installed version of the ``resilient-sdk`` is the latest
  available version on PyPi
* Slight enhancements to the ``codegen`` template
* ``validate`` updates:

  * Ensure the base image of in an App's Dockerfile is valid
  * Further checks of ``setup.py`` file
  * Validate that all App's dependencies are using the ``~=`` syntax

**2022-07: version 45.1**

* No major changes. Just bumping build number to coincide with other builds

**2022-05: version 45.0**

* Added new option ``--draft-playbook`` to the ``clone`` command that if specified with the ``--playbook`` option
  will clone the Playbook into a **Draft** state, allowing you to change it's Activation Type
* ``codegen`` and ``extract`` now exclude the ``creator`` from the generated ``export.res`` file
* Minor updates to templates produced with ``codegen``

**2022-04: version 44.1**

* No major changes. Just bumping build number to coincide with other builds

**2022-02: version 44.0**

* Added support to ``codegen``, ``docgen``, ``package``, ``extract`` and ``clone`` for Playbooks
* Bump ``Jinja2`` to ``~=3.0`` for Python ``>=3.6``
* Officially support ``Python 3.9``

**2022-01: version 43.1**

* Added new ``validate`` functionality to the SDK